--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <section id="about">
     <h1>Sami Fariz</h1>
-    <p>I'm a Computer Science student at UIC, passionate about software development, system programming, and problem-solving. I love working with C, C++, Python, and Assembly, and I have hands-on experience with iOS development, web development, and low-level programming concepts like memory management, bitwise operations, and debugging with GDB.</p>
+    <p>I'm a Computer Science student at UIC with a strong passion for software development, system programming, and problem-solving. I have experience working with C, C++, Python, and Assembly, along with hands-on expertise in iOS and web development. My technical interests include systems programming, performance optimization, memory management, and advanced debugging techniques using GDB.</p>
 <div class="about-image">
     <img src="assets/IMG_2513.jpg" alt="Sami Fariz" />
 </div>  
