Added LinkedIn and Github links at the top

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sami Fariz - Portfolio</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <header>
@@ -16,8 +17,15 @@
         <li><a href="#contact">Contact Me</a></li>
       </ul>
     </nav>
+    <div class="social-header">
+        <a href="https://github.com/SamiFariz" target="_blank" class="github-icon">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/sami-fariz/" target="_blank" class="linkedin-icon">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
   </header>
-  
   <section id="about">
     <h1>Sami Fariz</h1>
     <p>I'm a Computer Science student at UIC with a strong passion for software development, system programming, and problem-solving. I have experience working with C, C++, Python, and Assembly, along with hands-on expertise in iOS and web development. My technical interests include systems programming, performance optimization, memory management, and advanced debugging techniques using GDB.</p>
