--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
   <section id="about">
     <h1>Sami Fariz</h1>
     <p>I'm a Computer Science student at UIC with a strong passion for software development, system programming, and problem-solving. I have experience working with C, C++, Python, and Assembly, along with hands-on expertise in iOS and web development. My technical interests include systems programming, performance optimization, memory management, and advanced debugging techniques using GDB.</p>
-    <div class="about-image">
-      <img src="assets/IMG_2513.jpg" alt="Sami Fariz" />
-    </div>
+    <p>When I'm not coding, you can find me diving into the latest advancements in computer science, whether it's exploring new frameworks, experimenting with cutting-edge tools, or contributing to open-source projects that push the boundaries of technology. Outside of tech, I enjoy playing basketball, taking a walk and playing video games, which helps me recharge and approach problems with a fresh perspective.</p> 
+   
+</div>
+<div class="about-image">
+  <img src="assets/IMG_2513.jpg" alt="Sami Fariz" />
+</div>
+
   </section>
   
   <section id="projects">
@@ -44,6 +48,7 @@
       Each prayer time card flips to reveal a motivational quote from the Quran.
       Allows users to select a Surah (chapter) from the Quran via a dropdown menu.
       </p>
+      
       <a href="https://www.dhikrconnect.com" class="visit-btn">Visit Website</a>
     </div>
     <!-- <div class="project">
