--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section id="about">
     <h1>Sami Fariz</h1>
     <p>I'm a Computer Science student at UIC with a strong passion for software development, system programming, and problem-solving. I have experience working with C, C++, Python, and Assembly, along with hands-on expertise in iOS and web development. My technical interests include systems programming, performance optimization, memory management, and advanced debugging techniques using GDB.</p>
-    <p>When I'm not coding, you can find me diving into the latest advancements in computer science, whether it's exploring new frameworks, experimenting with cutting-edge tools, or contributing to open-source projects that push the boundaries of technology. Outside of tech, I enjoy playing basketball, taking a walk and playing video games, which helps me recharge and approach problems with a fresh perspective.</p> 
+    <p>When I'm not coding, you can find me diving into the latest advancements in computer science, whether it's exploring new frameworks, experimenting with cutting-edge tools, or contributing to open-source projects that push the boundaries of technology. Outside of tech, I enjoy playing basketball and playing video games, which helps me recharge and approach problems with a fresh perspective.</p> 
    
 </div>
 <div class="about-image">
