Updated Resume and Added Project

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
-      <h3>Islamic Prayer</h3>
+      <h3>Dhikr Connect (Website)</h3>
       <p>Developed a responsive website to display Islamic prayer times based on the user's location using JavaScript, HTML, and CSS.
       Integrated geolocation and API services for real-time data.
       Features a real-time countdown to the next prayer.
@@ -51,12 +51,20 @@
       
       <a href="https://www.dhikrconnect.com" class="visit-btn">Visit Website</a>
     </div>
-    <!-- <div class="project">
-      <h3>Project 2</h3> TO ADD ANOTHER PROJECT
-      <p>Description of your project. What technologies did you use?</p>
-      <a href="#">Live Demo</a>
-      <a href="#">GitHub</a>
-    </div> -->
+
+    <div class="project">
+      <h3>Dhikr Connect (App)</h3>
+      <p>DhikrConnect is a privacy-first iOS app built with Swift and SwiftUI,
+         serving as a comprehensive Islamic companion. It features real-time prayer 
+         time calculations using CoreLocation and the Aladhan API, a responsive Quran browser, 
+         a Qibla compass, Zakat calculator, and daily Hadith display. Designed with MVVM architecture, 
+         it supports offline use, dark/light mode, Arabic typography, and optimized performance across 12+ 
+         devices in 200+ countries. With 1000+ daily users and 99.9% crash-free sessions, DhikrConnect integrates 
+         device hardware and REST APIs to deliver a seamless, respectful religious experience.
+      </p>
+      
+      <a href="https://apps.apple.com/us/app/dhikr-connect/id6743780696" class="visit-btn">Visit App</a>
+    </div>
   </section>
   
   <section id="resume">
