Updated About Me Section

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <h2 class="section-title">About Me</h2>
       <div class="about-content">
         <div class="about-text">
-          <p>I'm a Computer Science student at UIC with a strong passion for software development, system programming, and problem-solving. I have experience working with C, C++, Python, and Assembly, along with hands-on expertise in iOS and web development.</p>
-          <p>My technical interests include systems programming, performance optimization, memory management, and advanced debugging techniques using GDB.</p>
-          <p>When I'm not coding, you can find me diving into the latest advancements in computer science, whether it's exploring new frameworks, experimenting with cutting-edge tools, or contributing to open-source projects that push the boundaries of technology. Outside of tech, I enjoy playing basketball and video games, which helps me recharge and approach problems with a fresh perspective.</p>
+          <p>I’m a software engineer passionate about systems programming, performance optimization, and building efficient solutions in C, C++, Python, and Assembly. With hands-on experience in iOS and web development, I thrive at the intersection of high-performance computing and modern software engineering.</p>
+          <p>My core technical strengths lie in systems programming, particularly in areas like memory management, kernel-level development, and embedded systems. I’m experienced in performance tuning—optimizing algorithms, minimizing latency, and debugging complex issues using tools like GDB and LLDB. I also bring full-stack development experience to the table, having built scalable, maintainable applications across both frontend and backend stacks.</p>
+          <p>When I’m not coding, I contribute to open-source projects that push the boundaries of technology, constantly exploring new frameworks, compilers, and toolchains to stay ahead of the curve. To keep my problem-solving skills sharp, I recharge with basketball and gaming—because the best solutions often come from a fresh, well-balanced mindset.</p>
         </div>
         <div class="about-image">
           <img src="assets/IMG_2330.jpg" alt="Sami Fariz" loading="lazy" />
