Updated background for projects

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <h2 class="section-title">About Me</h2>
       <div class="about-content">
         <div class="about-text">
-          <p>I’m a software engineer passionate about systems programming, performance optimization, and building efficient solutions in C, C++, Python, and Assembly. With hands-on experience in iOS and web development, I thrive at the intersection of high-performance computing and modern software engineering.</p>
-          <p>My core technical strengths lie in systems programming, particularly in areas like memory management, kernel-level development, and embedded systems. I’m experienced in performance tuning—optimizing algorithms, minimizing latency, and debugging complex issues using tools like GDB and LLDB. I also bring full-stack development experience to the table, having built scalable, maintainable applications across both frontend and backend stacks.</p>
-          <p>When I’m not coding, I contribute to open-source projects that push the boundaries of technology, constantly exploring new frameworks, compilers, and toolchains to stay ahead of the curve. To keep my problem-solving skills sharp, I recharge with basketball and gaming—because the best solutions often come from a fresh, well-balanced mindset.</p>
+          <p>I'm a software engineer passionate about systems programming, performance optimization, and building efficient solutions in C, C++, Python, and Assembly. With hands-on experience in iOS and web development, I thrive at the intersection of high-performance computing and modern software engineering.</p>
+          <p>My core technical strengths lie in systems programming, particularly in areas like memory management, kernel-level development, and embedded systems. I'm experienced in performance tuning—optimizing algorithms, minimizing latency, and debugging complex issues using tools like GDB and LLDB. I also bring full-stack development experience to the table, having built scalable, maintainable applications across both frontend and backend stacks.</p>
+          <p>When I'm not coding, I contribute to open-source projects that push the boundaries of technology, constantly exploring new frameworks, compilers, and toolchains to stay ahead of the curve. To keep my problem-solving skills sharp, I recharge with basketball and gaming—because the best solutions often come from a fresh, well-balanced mindset.</p>
         </div>
         <div class="about-image">
           <img src="assets/IMG_2330.jpg" alt="Sami Fariz" loading="lazy" />
@@ -170,7 +170,7 @@
         <div class="project-card">
           <div class="project-card-inner">
             <div class="project-card-front">
-              <div class="project-image" style="background-image: url('https://www.shutterstock.com/image-photo/islamic-background-photo-mosque-shadows-600nw-2129645690.jpg')"></div>
+              <div class="project-image" style="background-image: url('assets/DC.png')"></div>
               <h3>Dhikr Connect (Website)</h3>
             </div>
             <div class="project-card-back">
@@ -184,7 +184,7 @@
         <div class="project-card">
           <div class="project-card-inner">
             <div class="project-card-front">
-              <div class="project-image" style="background-image: url('https://www.shutterstock.com/image-photo/islamic-background-photo-mosque-shadows-600nw-2129645690.jpg')"></div>
+              <div class="project-image" style="background-image: url('assets/newDC.png')"></div>
               <h3>Dhikr Connect (App)</h3>
             </div>
             <div class="project-card-back">
