--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
 <body>
+  <div class="scroll-progress"></div>
   <div class="preloader">
     <div class="loader"></div>
   </div>
@@ -77,7 +78,6 @@
       <div class="skills-container">
         <div class="skills-circle-container">
           <div class="skills-circle">
-            <!-- Skills logos will be added dynamically via JavaScript -->
           </div>
         </div>
       </div>
