--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header id="home">
     <div class="header-content">
       <h1 class="animate-title">Sami Fariz <span class="welcome-hand">👋</span></h1>
-      <p class="animate-subtitle">Full-Stack Developer | Building Real-World Solutions</p>
+      <p class="animate-subtitle typing-animation">Full-Stack Developer | Building Real-World Solutions</p>
       <a href="#contact" class="cta-button animate-button">Get in touch</a>
     </div>
   </header>
