--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="project-card">
           <div class="project-card-inner">
             <div class="project-card-front">
-              <div class="project-image" style="background-image: url('assets/newDC.png')"></div>
+              <div class="project-image" style="background-image: url('assets/DC2.png')"></div>
               <h3>Dhikr Connect (App)</h3>
             </div>
             <div class="project-card-back">
